--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -28,7 +28,7 @@ img{max-width:100%;height:auto}
 .nav{position:relative;display:flex;align-items:center;justify-content:space-between;height:4.8rem}
 @media screen and (max-width: 54.99em){.nav__menu{position:fixed;top:4.8rem;width:80%;height:100%;padding:3.2rem;background-color:#0e2431;transform:translateX(100vw);transition:transform .3s}}
 .nav__item{margin-bottom:3.2rem}
-.nav__item .nav__link{position:relative;font-size:1.6rem;font-weight:600;color:#0e2431;transition:color .3s}
+.nav__item .nav__link{position:relative;font-size:1.6rem;font-weight:600;transition:color .3s}
 .nav__item .nav__link:hover{position:relative}
 .nav__item .nav__link:hover::after{position:absolute;content:"";width:100%;height:.288rem;left:0;top:3.4rem;background-color:#0571f8}
 .active::after{position:absolute;content:"";width:100%;height:.288rem;left:0;top:3.4rem;background-color:#0571f8}
