--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -89,8 +89,8 @@ img{max-width:100%;height:auto}
   --link-color: #6bb3eb; /* Default link color */
   --header-background-color: #ffffff;
   --footer-background-color: #0e2431; /* Default footer color */
-  --nav-link-color: #0e2431; /* Default nav link color */
-/*  --scrollbar-thumb-color: #0571f8; Default scrollbar color */
+/*  --nav-link-color: #0e2431; /* Default nav link color */
+  --scrollbar-thumb-color: #0571f8; Default scrollbar color */
   --wave-color: #0571f8; /* Default wave color */
 }
 
