--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,8 +29,6 @@ img{max-width:100%;height:auto}
 @media screen and (max-width: 54.99em){.nav__menu{position:fixed;top:4.8rem;width:80%;height:100%;padding:3.2rem;background-color:#0e2431;transform:translateX(100vw);transition:transform .3s}}
 .nav__item{margin-bottom:3.2rem}
 .nav__item .nav__link{position:relative;font-size:1.6rem;font-weight:600;transition:color .3s}
-.nav__item::after{margin-bottom:3.2rem}
-.nav__item .nav__link::after{position:relative;font-size:1.6rem;font-weight:600;transition:color .3s}
 .nav__item .nav__link:hover{position:relative}
 .nav__item .nav__link:hover::after{position:absolute;content:"";width:100%;height:.288rem;left:0;top:3.4rem;background-color:#0571f8}
 .active::after{position:absolute;content:"";width:100%;height:.288rem;left:0;top:3.4rem;background-color:#0571f8}
@@ -91,7 +89,7 @@ img{max-width:100%;height:auto}
   --link-color: #6bb3eb; /* Default link color */
   --header-background-color: #ffffff;
   --footer-background-color: #0e2431; /* Default footer color */
-/*  --nav-link-color: #0e2431; /* Default nav link color */
+  --nav-link-color: #0e2431; /* Default nav link color */
   --scrollbar-thumb-color: #0571f8; Default scrollbar color */
   --wave-color: #0571f8; /* Default wave color */
 }
